# mods

./: .gitattributes  cabal.nix  content  default.nix  flake.nix  mods.cabal
mods/: mods.cabal
mods/app/: Main.hs
mods/test/: ParserTest.hs
src/: Agenda.hs  MyLib.hs  Parser.hs
test/: Main.hs  ParserTest.hs
